<resources>
    <string name="app_name">Halachic Prayer Times</string>
    <string name="title_activity_zmanim">Halachic Times</string>
    <string name="location_unknown">Unknown address</string>
    <string name="location_coords">Lat. %1$s; Lng. %2$s</string>
    <string name="twelve_hour_time_format">h:mm:ss a</string>
    <string name="twenty_four_hour_time_format">HH:mm:ss</string>
    <string name="month_day_year" formatted="false">%B %-e, %Y</string>
    <string name="opinion_120">Day is 120 minutes before sunrise / after sunset</string>
    <string name="opinion_120_zmanis">Day is 120 <i>zmaniyos</i> minutes before sunrise / after sunset</string>
    <string name="opinion_16">Day is 16.1° below sunrise / sunset</string>
    <string name="opinion_16_sunset">Day is from dawn 16.1° to sea level sunset</string>
    <string name="opinion_16_night">Day is from dawn 16.1° to nightfall</string>
    <string name="opinion_26">Day is 26° below sunrise / sunset</string>
    <string name="opinion_19">Day is 19.8° below sunrise / sunset</string>
    <string name="opinion_18">Day is 18° below sunrise / sunset</string>
    <string name="opinion_60">Day is 60 minutes before sunrise / after sunset</string>
    <string name="opinion_72">Day is 72 minutes before sunrise / after sunset</string>
    <string name="opinion_72_zmanis">Day is 72 <i>zmaniyos</i> minutes before sunrise / after sunset</string>
    <string name="opinion_90">Day is 90 minutes before sunrise / after sunset</string>
    <string name="opinion_90_zmanis">Day is 90 <i>zmaniyos</i> minutes before sunrise / after sunset</string>
    <string name="opinion_96">Day is 96 minutes before sunrise / after sunset</string>
    <string name="opinion_96_zmanis">Day is 96 <i>zmaniyos</i> minutes before sunrise / after sunset</string>
    <string name="opinion_ateret">According to Yeshivat Ateret Torah</string>
    <string name="opinion_gra">According to GRA and Baal Tanya</string>
    <string name="opinion_mga">According to Magen Avraham</string>
    <string name="opinion_tam">According to Rabbeinu Tam</string>
    <string name="dawn">Dawn</string>
    <string name="dawn_19" translatable="false">@string/opinion_19</string>
    <string name="dawn_120" translatable="false">@string/opinion_120</string>
    <string name="dawn_120_zmanis" translatable="false">@string/opinion_120_zmanis</string>
    <string name="dawn_18" translatable="false">@string/opinion_18</string>
    <string name="dawn_26" translatable="false">@string/opinion_26</string>
    <string name="dawn_16" translatable="false">@string/opinion_16</string>
    <string name="dawn_96" translatable="false">@string/opinion_96</string>
    <string name="dawn_96_zmanis" translatable="false">@string/opinion_96_zmanis</string>
    <string name="dawn_90" translatable="false">@string/opinion_90</string>
    <string name="dawn_90_zmanis" translatable="false">@string/opinion_90_zmanis</string>
    <string name="dawn_72" translatable="false">@string/opinion_72</string>
    <string name="dawn_72_zmanis" translatable="false">@string/opinion_72_zmanis</string>
    <string name="dawn_60" translatable="false">@string/opinion_60</string>
    <string name="tallis">Earliest tallis and tefillin (misheyakir)</string>
    <string name="tallis_summary">Sun is 11.5° below horizon</string>
    <string name="tallis_11">Sun is 11° below horizon</string>
    <string name="tallis_10">Sun is 10.2° below horizon</string>
    <string name="sunrise">Sunrise</string>
    <string name="sunrise_summary">In a level region</string>
    <string name="sunrise_sea">At sea level</string>
    <string name="shema">Latest shema</string>
    <string name="shema_16_sunset" translatable="false">@string/opinion_16_sunset</string>
    <string name="shema_7">Day is from dawn 16.1° to night 7.083°</string>
    <string name="shema_19" translatable="false">@string/opinion_19</string>
    <string name="shema_120" translatable="false">@string/opinion_120</string>
    <string name="shema_18" translatable="false">@string/opinion_18</string>
    <string name="shema_96" translatable="false">@string/opinion_96</string>
    <string name="shema_96_zmanis" translatable="false">@string/opinion_96_zmanis</string>
    <string name="shema_16" translatable="false">@string/opinion_16</string>
    <string name="shema_90" translatable="false">@string/opinion_90</string>
    <string name="shema_90_zmanis" translatable="false">@string/opinion_90_zmanis</string>
    <string name="shema_72" translatable="false">@string/opinion_72</string>
    <string name="shema_72_zmanis" translatable="false">@string/opinion_72_zmanis</string>
    <string name="shema_mga" translatable="false">@string/opinion_mga</string>
    <string name="shema_ateret" translatable="false">@string/opinion_ateret</string>
    <string name="shema_3">3 hours before midday</string>
    <string name="shema_fixed">3 hours before fixed local midday</string>
    <string name="shema_gra" translatable="false">@string/opinion_gra</string>
    <string name="prayers">Latest morning prayers (shacharis)</string>
    <string name="prayers_120" translatable="false">@string/opinion_120</string>
    <string name="prayers_96" translatable="false">@string/opinion_96</string>
    <string name="prayers_96_zmanis" translatable="false">@string/opinion_96_zmanis</string>
    <string name="prayers_19" translatable="false">@string/opinion_19</string>
    <string name="prayers_90" translatable="false">@string/opinion_90</string>
    <string name="prayers_90_zmanis" translatable="false">@string/opinion_90_zmanis</string>
    <string name="prayers_ateret" translatable="false">@string/opinion_ateret</string>
    <string name="prayers_18" translatable="false">@string/opinion_18</string>
    <string name="prayers_fixed">2 hours before fixed local midday</string>
    <string name="prayers_16" translatable="false">@string/opinion_16</string>
    <string name="prayers_72" translatable="false">@string/opinion_72</string>
    <string name="prayers_72_zmanis" translatable="false">@string/opinion_72_zmanis</string>
    <string name="prayers_2">2 hours before midday</string>
    <string name="prayers_mga" translatable="false">@string/opinion_mga</string>
    <string name="prayers_gra" translatable="false">@string/opinion_gra</string>
    <string name="midday">Midday (chatzos)</string>
    <string name="midday_summary">Solar noon</string>
    <string name="midday_fixed">Noon adjusted for the local latitude</string>
    <string name="earliest_mincha">Mincha gedola</string>
    <string name="earliest_mincha_summary">Earliest afternoon prayers</string>
    <string name="earliest_mincha_ateret" translatable="false">@string/opinion_ateret</string>
    <string name="earliest_mincha_72" translatable="false">@string/opinion_72</string>
    <string name="earliest_mincha_30">30 minutes after midday</string>
    <string name="earliest_mincha_16" translatable="false">@string/opinion_16</string>
    <string name="mincha">Mincha ketana</string>
    <string name="mincha_summary">Afternoon prayers</string>
    <string name="mincha_72" translatable="false">@string/opinion_72</string>
    <string name="mincha_16" translatable="false">@string/opinion_16</string>
    <string name="mincha_ateret" translatable="false">@string/opinion_ateret</string>
    <string name="plug_hamincha">Plug hamincha</string>
    <string name="plug_hamincha_gra" translatable="false">@string/opinion_gra</string>
    <string name="plug_hamincha_120" translatable="false">@string/opinion_120</string>
    <string name="plug_hamincha_120_zmanis" translatable="false">@string/opinion_120_zmanis</string>
    <string name="plug_hamincha_16" translatable="false">@string/opinion_16</string>
    <string name="plug_hamincha_16_alos" translatable="false">@string/opinion_16_night</string>
    <string name="plug_hamincha_18" translatable="false">@string/opinion_18</string>
    <string name="plug_hamincha_19" translatable="false">@string/opinion_19</string>
    <string name="plug_hamincha_26" translatable="false">@string/opinion_26</string>
    <string name="plug_hamincha_60" translatable="false">@string/opinion_60</string>
    <string name="plug_hamincha_72" translatable="false">@string/opinion_72</string>
    <string name="plug_hamincha_72_zmanis" translatable="false">@string/opinion_72_zmanis</string>
    <string name="plug_hamincha_90" translatable="false">@string/opinion_90</string>
    <string name="plug_hamincha_90_zmanis" translatable="false">@string/opinion_90_zmanis</string>
    <string name="plug_hamincha_96" translatable="false">@string/opinion_96</string>
    <string name="plug_hamincha_96_zmanis" translatable="false">@string/opinion_96_zmanis</string>
    <string name="plug_hamincha_16_sunset" translatable="false">@string/opinion_16_sunset</string>
    <string name="plug_hamincha_ateret" translatable="false">@string/opinion_ateret</string>
    <string name="candles">Candle lighting</string>
    <string name="chanukka">Chanukka</string>
    <string name="candles_chanukka_opinion" translatable="false">@string/chanukka</string>
    <plurals name="candles_summary">
        <item quantity="one">%1$d minute before sunset</item>
        <item quantity="other">%1$d minutes before sunset</item>
    </plurals>
    <plurals name="candles_chanukka">
        <item quantity="one">%1$d Chanukka candle</item>
        <item quantity="other">%1$d Chanukka candles</item>
    </plurals>
    <string name="sunset">Sunset</string>
    <string name="sunset_summary" translatable="false">@string/sunrise_summary</string>
    <string name="sunset_sea" translatable="false">@string/sunrise_sea</string>
    <string name="twilight">Twilight</string>
    <string name="twilight_2stars">2 stars visible</string>
    <string name="twilight_7_083">13.5 minutes before 7.083° nightfall</string>
    <string name="twilight_58">58.5 minutes after sunset</string>
    <string name="twilight_13">Sun is 13.24° below horizon</string>
    <string name="nightfall">Nightfall</string>
    <string name="nightfall_3stars">3 stars visible</string>
    <string name="nightfall_120" translatable="false">@string/opinion_120</string>
    <string name="nightfall_120_zmanis" translatable="false">@string/opinion_120_zmanis</string>
    <string name="nightfall_16" translatable="false">@string/opinion_16</string>
    <string name="nightfall_18" translatable="false">@string/opinion_18</string>
    <string name="nightfall_19" translatable="false">@string/opinion_19</string>
    <string name="nightfall_26" translatable="false">@string/opinion_26</string>
    <string name="nightfall_60" translatable="false">@string/opinion_60</string>
    <string name="midnight">Midnight (chatzos)</string>
    <string name="menu_settings">Settings</string>
    <string name="category_general">General</string>
    <string name="coords_title">Coordinates</string>
    <string name="coords_hidden">Coordinates are hidden</string>
    <string name="coords_visible">Coordinates are visible</string>
    <string name="coords_format_title">Coordinates format</string>
    <string name="coords_format_summary">Notation of latitude and longitude</string>
    <string name="past_title">Times that have elapsed</string>
    <string name="past_enabled">Past times are enabled</string>
    <string name="past_disabled">Past times are disabled</string>
    <string name="summaries_title">Summaries</string>
    <string name="summaries_hidden">Summaries are hidden</string>
    <string name="summaries_visible">Summaries are visible</string>
    <string name="gradient_title">Gradient background</string>
    <string name="gradient_hidden">Gradient is hidden</string>
    <string name="gradient_visible">Gradient is visible</string>
    <string name="menu_date">Date</string>
    <string name="menu_compass">Compass</string>
    <string name="opinion">Opinion</string>
    <string name="reminder">Reminder</string>
    <string name="menu_location">Location</string>
</resources>