<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menu_compass"
        android:icon="@android:drawable/ic_menu_compass"
        android:orderInCategory="100"
        android:title="@string/menu_compass"/>
    <item
        android:id="@+id/menu_date"
        android:icon="@android:drawable/ic_menu_day"
        android:orderInCategory="150"
        android:title="@string/menu_date"/>
    <item
        android:id="@+id/menu_location"
        android:icon="@android:drawable/ic_menu_mylocation"
        android:orderInCategory="200"
        android:title="@string/menu_location"/>
    <item
        android:id="@+id/menu_settings"
        android:icon="@android:drawable/ic_menu_preferences"
        android:orderInCategory="900"
        android:title="@string/menu_settings"/>

</menu>